be more specific

--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,10 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
-  "linter": {
-    "rules": {
-      "correctness": "error"
-    }
-  }
+	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+	"linter": {
+		"rules": {
+			"correctness": {
+				"useJsonImportAttributes": "error"
+			}
+		}
+	}
 }
